Update the hearder style

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <div class="header-first">
-        <button class="btn-bars"><i class="fa-solid fa-bars"></i></button>
+        <span class="btn-bars"><i class="fa-solid fa-bars"></i></span>
         <h3>Gallery</h3>
         <a href="mailto:alishahsafdari905@email.com" aria-label="Contact Us" class="contact-link">
             <i class="fas fa-envelope" aria-hidden="true"></i>
